--- a/environment.yml
+++ b/environment.yml
@@ -8,3 +8,4 @@ dependencies:
   - h5py
   - pip:
 #    - git+https://github.com/mschrimpf/DenseNet.git  # cannot be installed automatically because of missing setup.py. Instead, clone and copy manually to site-packages.
+    - keras_squeezenet
