use latest (git) version of keras_squeezenet

--- a/environment.yml
+++ b/environment.yml
@@ -9,4 +9,4 @@ dependencies:
   - pip:
     - sklearn
 #    - git+https://github.com/mschrimpf/DenseNet.git  # cannot be installed automatically because of missing setup.py. Instead, clone and copy manually to site-packages.
-    - keras_squeezenet
+    - git+https://github.com/rcmalli/keras-squeezenet.git
