--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,8 @@ dependencies:
   - python>=3.6
   - keras
   - h5py
+  - scikit-learn
   - pip:
-    - sklearn
 #    - git+https://github.com/mschrimpf/DenseNet.git  # cannot be installed automatically because of missing setup.py. Instead, clone and copy manually to site-packages.
     - git+https://github.com/rcmalli/keras-squeezenet.git
+    - pillow
