--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: decomposition
+name: neural-correlations
 channels:
 - defaults
 - soumith
@@ -8,6 +8,6 @@ dependencies:
   - h5py
   - scikit-learn
   - pip:
-#    - git+https://github.com/mschrimpf/DenseNet.git  # cannot be installed automatically because of missing setup.py. Instead, clone and copy manually to site-packages.
+    - git+https://github.com/mschrimpf/DenseNet.git
     - git+https://github.com/rcmalli/keras-squeezenet.git
     - pillow
