--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,13 @@
 name: neural-correlations
 channels:
 - defaults
-- soumith
+- anaconda
+- pytorch
 dependencies:
   - python>=3.6
   - keras
+  - pytorch
+  - torchvision
   - h5py
   - scikit-learn
   - pip:
