--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - torchvision
   - h5py
   - scikit-learn
+  - matplotlib
   - pip:
     - git+https://github.com/mschrimpf/DenseNet.git
     - git+https://github.com/rcmalli/keras-squeezenet.git
