map all layers to all regions

--- a/environment.yml
+++ b/environment.yml
@@ -17,3 +17,4 @@ dependencies:
     - git+https://github.com/mschrimpf/DenseNet.git
     - git+https://github.com/rcmalli/keras-squeezenet.git
     - pillow
+    - llist
