--- a/environment.yml
+++ b/environment.yml
@@ -19,3 +19,4 @@ dependencies:
     - git+https://github.com/mschrimpf/skip-thoughts.git
     - git+https://github.com/mschrimpf/lm_1b.git
     - nbsvm
+    - git+https://github.com/williamrainer/OpenNMT-py.git
